# GenomeGuard

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  genome_guard.py  guard_config.example.json  pyproject.toml  skills.md
.cursor/rules/: mcp.json  watcher-knowledge-graph.mdc
.genome/patches/: sample_route_1781017191.patch
.github/: copilot-instructions.md
document/: prd.md
prompts/: session-0.md  session-1.md  session-2.md  session-3.md  session-4.md  session-5.md  session-6.md  session-7.md  watchout-for.md
src/: AGENTS.md  _inspect_db.py  guard_config.json  requirements.txt  skills.md
src/genomeguard/: __init__.py  cli.py  core.py  critic.py  genome_guard.py  graph.py  orchestrator.py  secrets.py  surgeon.py  tui.py  utils.py  verifier.py  watcher.py
tests/: test_cli.py  test_critic_parser.py  test_modes.py  test_openai_config.py  test_openai_integration.py  test_orchestrator.py  test_pipeline_integration.py  test_secrets.py  test_sensor.py  test_surgeon.py  test_verifier.py
tests/fixtures/: critic_decay_detected.json  critic_healthy.json
tests/tmp/: enforce_sample_route.py  sample_route.py
