[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genome-guard"
version = "0.1.0"
description = "Codegenome immune system — real-time architecture guardrail"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "codegenome",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
genome-guard = "genomeguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeguard"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/genomeguard",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
