[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genome-guard"
version = "0.1.0"
description = "Codegenome immune system — real-time architecture guardrail"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Md. Fatin Shadab Turja" },
]
keywords = [
    "architecture",
    "codegenome",
    "openai",
    "refactoring",
    "guardrail",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.0.0",
    "codegenome",
    "cryptography>=42.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
genome-guard = "genomeguard.cli:main"

[project.urls]
Homepage = "https://github.com/FatinShadab/GenomeGuard"
Repository = "https://github.com/FatinShadab/GenomeGuard"
Issues = "https://github.com/FatinShadab/GenomeGuard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeguard"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/genomeguard",
    "/README.md",
    "/LICENSE",
    "/guard_config.example.json",
    "/.env.example",
]
exclude = [
    "/tests",
    "/docs",
    "/prompts",
    "/.cursor",
    "/.genome",
    "/src/.genome",
    "/.venv",
    "/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live network tests requiring OpenAI credentials (excluded from default CI)",
]
